option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option('root_user_mgmt', type: 'feature', description: 'Enable management of the root user', value: 'enabled')

option('MIN_UCASE_CHRS',
    type: 'integer',
    value: 1,
    description: 'Minimum number of upper case characters in the password',
)

option('MIN_LCASE_CHRS',
    type: 'integer',
    value: 1,
    description: 'Minimum number of lower case characters in the password',
)

option('MIN_DIGITS',
    type: 'integer',
    value: 1,
    description: 'Minimum number of digits in the password',
)

option('MIN_SPEC_CHRS',
    type: 'integer',
    value: 1,
    description: 'Minimum number of special characters in the password',
)

option('MIN_PASSWORD_LENGTH',
    type: 'integer',
    value: 8,
    description: 'Min password Length',
)

option('ACCOUNT_UNLOCK_TIMEOUT',
    type: 'integer',
    value: 600,
    description: 'Account unlock timeout',
)

option('MAX_FAILED_LOGIN_ATTEMPTS',
    type: 'integer',
    value: 3,
    description: 'Maximum number of failed login attempts',
)

option('MIN_CLASS',
    type: 'integer',
    value: 4,
    description: 'Minimum number of required classes of characters ',
)

option('USER_CHECK',
    type: 'integer',
    value: 1,
    description: 'Check is username present in the password',
)

option('DICT_CHECK',
    type: 'integer',
    value: 1,
    description: 'Check is the password is dictionary word',
)

option('MAX_SEQUENCE',
    type: 'integer',
    value: 3,
    description: 'Maximum number of sequence allowed in password',
)

option('MAX_REPEAT',
    type: 'integer',
    value: 3,
    description: 'Maximum number of allowed same consecutive characters in password',
)

option('DIF_OK',
    type: 'integer',
    value: 0,
    description: 'Number of characters in a new password that must be different from the old password ',
)

option('REMEMBER_OLD_PASSWORD',
    type: 'integer',
    value: 0,
    description: 'Number old password remembered',
)

option('ipmi', type : 'feature', value : 'enabled', description : 'Enable/disable ipmi feature.')