option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option('root_user_mgmt', type: 'feature', description: 'Enable management of the root user', value: 'enabled')

option('MIN_PASSWORD_LENGTH',
    type: 'integer',
    value: 8,
    description: 'Min password Length',
)

option('ACCOUNT_UNLOCK_TIMEOUT',
    type: 'integer',
    value: 600,
    description: 'Account unlock timeout',
)

option('MAX_FAILED_LOGIN_ATTEMPTS',
    type: 'integer',
    value: 3,
    description: 'Maximum number of failed login attempts',
)

option('CREATE_USER_HOME_FOLDER',
    type: 'boolean',
    value: true,
    description: 'Enable creating user home directory',
)

option('ipmi', type : 'feature', value : 'enabled', description : 'Enable/disable ipmi feature.')
